--- a/src/Components/Layouts/Productlisting/Productlisting.css
+++ b/src/Components/Layouts/Productlisting/Productlisting.css
@@ -7,6 +7,9 @@
     padding-top: 3rem;
     display: flex;
     justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 5rem;
     
 }
 
